--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -6,11 +6,13 @@
     z-index: 1000;
     padding: var(--space-sm) 0;
     transition: all var(--transition-normal);
-    background-color: transparent;
+    background-color: #426BC2;
+    padding: 50;
+    margin : 50;
   }
   
   .header.scrolled {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color:#426BC2;
     box-shadow: var(--shadow-sm);
     backdrop-filter: blur(10px);
     padding: var(--space-xs) 0;
@@ -20,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
   }
   
   .logo {
@@ -30,7 +33,7 @@
     margin: 0;
     font-weight: 700;
     font-size: 1.8rem;
-    color: var(--color-primary-700);
+    color:  rgba(255, 255, 255, 0.95);
     transition: color var(--transition-fast);
   }
   
@@ -54,6 +57,7 @@
     font-weight: 400;
     position: relative;
     padding: var(--space-xs) 0;
+     color: white;
   }
   
   .nav-links a::after {
@@ -63,8 +67,9 @@
     left: 0;
     width: 0;
     height: 2px;
-    background-color: var(--color-primary-500);
+    background-color:  rgba(255, 255, 255, 0.95);
     transition: width var(--transition-normal);
+    
   }
   
   .nav-links a:hover::after,
@@ -73,7 +78,8 @@
   }
   
   .nav-reservation a {
-    color: var(--color-neutral-100);
+    color:  rgba(255, 255, 255, 0.95);
+    background-color: blueviolet;
   }
   
   .nav-reservation a::after {
@@ -86,7 +92,7 @@
     border: none;
     cursor: pointer;
     font-size: 1.5rem;
-    color: var(--color-primary-700);
+    color:  rgba(255, 255, 255, 0.95);
     z-index: 1001;
   }
   
@@ -139,12 +145,14 @@
     
     .nav-reservation {
       margin-top: var(--space-md);
+      
     }
     
     .nav-reservation a {
       text-align: center;
       display: block;
       width: 100%;
+      
     }
     
     .mobile-menu-backdrop {
